hawkbit/hawkbit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hawkbit
spec:
  replicas: 1
  selector:
    matchLabels:
       app: hawkbit
  template:
    metadata:
      labels:
        app: hawkbit
    spec:
      containers:
      - image: hawkbit/hawkbit-update-server:latest-mysql
        name: hawkbit
        args:
        - --hawkbit.server.ddi.security.authentication.anonymous.enabled=true
        - --hawkbit.dmf.rabbitmq.enabled=false
        ports:
        - containerPort: 8080
          name: hawkbit-web
