hawkbit/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
       app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_ALLOW_EMPTY_PASSWORD
          value: "true"
        - name: MYSQL_DATABASE
          valueFrom:
            configMapKeyRef:
              name: configmap-hawkbit
              key: DATABASE_NAME
        - name: MYSQL_USER
          valueFrom:
            secretKeyRef:
              name: secrets-hawkbit
              key: mysql.user
        image: mysql:latest
        name: mysql
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
