hawkbit/hawkbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hawkbit
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: hawkbit
  type: ClusterIP
